--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
     <link rel="manifest" href="./public/site.webmanifest" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <base href="/CarRent" />
     <title>Car Rent</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/index.jsx"></script>
+    <script type="module" src="./src/index.jsx"></script>
   </body>
 </html>
