--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -22,6 +23,12 @@
     <link rel="manifest" href="./public/site.webmanifest" />
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Abel&family=Fuggles&display=swap"
+      rel="stylesheet"
+    />
     <title>Car Rent</title>
   </head>
   <body>
