--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Caveat:wght@700&family=Playfair+Display&family=Raleway:wght@400;700&family=Roboto:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Caveat:wght@700&family=Manrope:wght@400;500;700&family=Playfair+Display&family=Raleway:wght@400;700&display=swap"
       rel="stylesheet"
     />
     <title>Car Rent</title>
